Inserindo textos na landing

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,246 @@
     <title> Boilerplate com Stylus </title>
   </head>
   <body>
-    <h1> Boilerplate Front End com Stylus </h1>
+
+    <!-- Cabecalho do site -->
+    <header>
+
+    </header>
+
+    <!-- Seção de explicação -->
+    <section class="section">
+      <h2> Projeto Cinco Solas </h2>
+
+      <p>
+        31 de Outubro de 1517 é uma data muito importante para os cristãos protestantes / evangélicos de todo mundo. Neste ano de 2017 comemora-se o aniversário de 500 anos da Reforma Protestante.
+      </p>
+
+      <p>
+        Quando o monge católico Martinho Lutero, filiado à ordem de Santo Agostinho, fixou suas 95 teses na porta da igreja do Castelo, em Wittemberg, ele estava conclamando o povo e os eruditos para que repensassem o modo como interpretavam e viviam o Cristianismo.
+      </p>
+
+      <p>
+        Em uma época que o povo comum era privado da leitura das Escrituras e o papa liderava a cristandade com mãos de ferro, Lutero foi uma voz levantada por Deus para dar início a uma completa revolução espiritual na Alemanha. Lutero combateu os vários desvios doutrinários de sua época praticados pela Igreja Católica Romana, condenou veementemente a venda de indulgências, traduziu a Bíblia para o alemão e a colocou nas mãos do povo comum. Enfim, inflamou o coração de seus irmãos à uma busca sincera por Deus e o Cristianismo autêntico.
+      </p>
+
+      <p>
+        Toda esta coragem levou Lutero a sofrer excomunhão por meio de uma bula editada pelo papa. Martinho Lutero em reação à Igreja Católica, queimou a bula papal em praça pública, rompendo de vez o elo com a Igreja Católica Romana. Finalmente, nos dizeres de Calvino, <span class="content--italic">"Post Tenebrax, Lux"</span> (depois das trevas, luz), após anos de escuridão e sombras, a luz do Evangelho voltava a brilhar no mundo.
+      </p>
+
+      <h3> Os Cinco Solas </h3>
+
+      <p>
+        Cinco Solas são frases latinas que definem princípios fundamentais da Reforma Protestante em contradição com os ensinamentos da Igreja Católica Romana. A palavra latina <span class="content--italic">sola</span> significa somente. Os cinco solas sintetizam os credos teológicos básicos dos reformadores, pilares os quais creram ser essenciais da vid e prática e cristã. Todos os cinco implicitamente rejeitam ou se contrapõem aos ensinamentos da então dominante Igreja Romana, a qual tinha, na mente dos reformadores, usurpado atributos divinos ou qualidades para a Igreja e sua hierarquia, especialmente seu superior, o Papa.
+      </p>
+
+      <p>
+        A seguir, conheça cada sola que será abordada neste evento. As declarações dos textos abaixo foram extraídas da <a href="http://www.monergismo.com/textos/credos/declaracao_cambridge.htm">Declaração de Cambrigde</a>
+      </p>
+    </section>
+
+    <!-- Seção Sola Deo Gloria -->
+    <section class="section">
+      <article>
+        <h2 class="section__title"> Sola Deo Gloria </h2>
+
+        <blockquote cite="https://www.bibliaonline.com.br/acf/ap/19">
+          <p>
+            &ldquo;E, depois destas coisas ouvi no céu uma grande voz de uma grande multidão, que dizia: Aleluia! A salvação, e a glória, e a honra, e o poder pertencem ao Senhor nosso Deus&rdquo;
+          </p>
+          <p> Apocalipse 19.1 </p>
+        </blockquote>
+
+        <div class="column__left">
+          <figure class="image">
+            <img src="" alt="">
+            <figcaption>
+              <p> Pr Renato Vargens </p>
+            </figcaption>
+          </figure>
+
+          <p>
+            <ul>
+              <li> Igreja Batista Monte Moriá </li>
+              <li> 23 de Setembro </li>
+            </ul>
+          </p>
+        </div>
+
+        <div class="column__right">
+          <p>
+            Reafirmamos que, como a salvação é de Deus e realizada por Deus, ela é para a glória de Deus e devemos glorificá-lo sempre. Devemos viver nossa vida inteira perante a face de Deus, sob a autoridade de Deus, e para sua glória somente.
+          </p>
+
+          <p>
+            Negamos que possamos apropriadamente glorificar a Deus se nosso culto for confundido com entretenimento, se negligenciarmos ou a Lei ou o Evangelho em nossa pregação, ou se permitirmos que o afeiçoamento próprio, a auto-estima e a auto-realização se tornem opções alternativas ao evangelho.
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <!-- Seção Sola Christus -->
+    <section class="section">
+      <article>
+        <h2 class="section__title"> Sola Christus </h2>
+
+        <blockquote cite="https://www.bibliaonline.com.br/acf/jo/14">
+          <p>
+            &ldquo;Disse-lhe Jesus: Eu sou o caminho, e a verdade e a vida; ninguém vem ao Pai, senão por mim&rdquo;
+          </p>
+          <p> João 14.6 </p>
+        </blockquote>
+
+        <div class="column__left">
+          <figure class="image">
+            <img src="" alt="">
+            <figcaption>
+              <p> Pr Valtair Miranda </p>
+            </figcaption>
+          </figure>
+
+          <p>
+            <ul>
+              <li> PIB Figueira </li>
+              <li> 7 de Outubro </li>
+            </ul>
+          </p>
+        </div>
+
+        <div class="column__right">
+          <p>
+            Reafirmamos que nossa salvação é realizada unicamente pela obra mediatória do Cristo histórico. Sua vida sem pecado e sua expiação por si só são suficientes para nossa justificação e reconciliação com o Pai.
+          </p>
+
+          <p>
+            Negamos que o evangelho esteja sendo pregado se a obra substitutiva de Cristo não estiver sendo declarada e a fé em Cristo e sua obra não estiver sendo invocada.
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <!-- Seção Sola Fide -->
+    <section class="section">
+      <article>
+        <h2 class="section__title"> Sola Fide </h2>
+
+        <blockquote cite="https://www.bibliaonline.com.br/acf/hb/11">
+          <p>
+            &ldquo;Ora, sem fé é impossível agradar-lhe; porque é necessário que aquele que se aproxima de Deus creia que ele existe, e que é galardoador dos que o buscam&rdquo;
+          </p>
+          <p> Hebreus 11.6 </p>
+        </blockquote>
+
+        <div class="column__left">
+          <figure class="image">
+            <img src="" alt="">
+            <figcaption>
+              <p> Pr Andre Myshilin </p>
+            </figcaption>
+          </figure>
+
+          <p>
+            <ul>
+              <li> PIB Parque Eldorado </li>
+              <li> 14 de Outubro </li>
+            </ul>
+          </p>
+        </div>
+
+        <div class="column__right">
+          <p>
+            Reafirmamos que a justificação é somente pela graça somente por intermédio da fé somente por causa de Cristo. Na justificação a retidão de Cristo nos é imputada como o único meio possível de satisfazer a perfeita justiça de Deus.
+          </p>
+
+          <p>
+            Negamos que a justificação se baseie em qualquer mérito que em nós possa ser achado, ou com base numa infusão da justiça de Cristo em nós; ou que uma instituição que reivindique ser igreja mas negue ou condene sola fide possa ser reconhecida como igreja legítima.
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <!-- Seção Sola Scriptura -->
+    <section class="section">
+      <article>
+        <h2 class="section__title"> Sola Scriptura </h2>
+
+        <blockquote cite="https://www.bibliaonline.com.br/acf/2tm/3">
+          <p>
+            &ldquo;Toda a Escritura é divinamente inspirada, e proveitosa para ensinar, para redargüir, para corrigir, para instruir em justiça&rdquo;
+          </p>
+          <p> II Timóteo 3.16 </p>
+        </blockquote>
+
+        <div class="column__left">
+          <figure class="image">
+            <img src="" alt="">
+            <figcaption>
+              <p> Pr Samuel Moutta </p>
+            </figcaption>
+          </figure>
+
+          <p>
+            <ul>
+              <li> PIB Mantiquira </li>
+              <li> 21 de Outubro </li>
+            </ul>
+          </p>
+        </div>
+
+        <div class="column__right">
+          <p>
+            Reafirmamos a Escritura inerrante como fonte única de revelação divina escrita, única para constranger a consciência. A Bíblia sozinha ensina tudo o que é necessário para nossa salvação do pecado, e é o padrão pelo qual todo comportamento cristão deve ser avaliado.
+          </p>
+
+          <p>
+            Negamos que qualquer credo, concílio ou indivíduo possa constranger a consciência de um crente, que o Espírito Santo fale independentemente de, ou contrariando, o que está exposto na Bíblia, ou que a experiência pessoal possa ser veículo de revelação.
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <!-- Seção Sola Gratia -->
+    <section class="section">
+      <article>
+        <h2 class="section__title"> Sola Gratia </h2>
+
+        <blockquote cite="https://www.bibliaonline.com.br/acf/2tm/3">
+          <p>
+            &ldquo;Porque a graça salvadora de Deus se há manifestado a todos os homens&rdquo;
+          </p>
+          <p> Tito 2.11 </p>
+        </blockquote>
+
+        <div class="column__left">
+          <figure class="image">
+            <img src="" alt="">
+            <figcaption>
+              <p> Pr Tcharley Amaral </p>
+            </figcaption>
+          </figure>
+
+          <p>
+            <ul>
+              <li> Igreja Batista Monte Moriá </li>
+              <li> 28 de Outubro </li>
+            </ul>
+          </p>
+        </div>
+
+        <div class="column__right">
+          <p>
+            Reafirmamos que na salvação somos resgatados da ira de Deus unicamente pela sua graça. A obra sobrenatural do Espírito Santo é que nos leva a Cristo, soltando-nos de nossa servidão ao pecado e erguendo-nos da morte espiritual à vida espiritual.
+          </p>
+
+          <p>
+            Negamos que a salvação seja em qualquer sentido obra humana. Os métodos, técnicas ou estratégias humanas por si só não podem realizar essa transformação. A fé não é produzida pela nossa natureza não-regenerada.
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <!-- Colaboradores -->
+    <footer class="footer">
+
+    </footer>
   </body>
 </html>
