--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Arimo|Trocchi|UnifrakturMaguntia" rel="stylesheet">
     <link rel="stylesheet" href="./css/app.css">
     <meta name="theme-color" content="#332211">
     <title> Projeto Cinco Solas </title>
@@ -18,7 +19,7 @@
       <!-- Seção de explicação -->
       <section class="section">
         <article>
-          <h2> Projeto Cinco Solas </h2>
+          <h2 class="section__title"> Projeto Cinco Solas </h2>
 
           <p>
             31 de Outubro de 1517 é uma data muito importante para os cristãos protestantes / evangélicos de todo mundo. Neste ano de 2017 comemora-se o aniversário de 500 anos da Reforma Protestante.
@@ -36,7 +37,7 @@
             Toda esta coragem levou Lutero a sofrer excomunhão por meio de uma bula editada pelo papa. Martinho Lutero em reação à Igreja Católica, queimou a bula papal em praça pública, rompendo de vez o elo com a Igreja Católica Romana. Finalmente, nos dizeres de Calvino, <span class="content--italic">"Post Tenebrax, Lux"</span> (depois das trevas, luz), após anos de escuridão e sombras, a luz do Evangelho voltava a brilhar no mundo.
           </p>
 
-          <h3> Os Cinco Solas </h3>
+          <h3 class="section__subtitle"> Os Cinco Solas </h3>
 
           <p>
             Cinco Solas são frases latinas que definem princípios fundamentais da Reforma Protestante em contradição com os ensinamentos da Igreja Católica Romana. A palavra latina <span class="content--italic">sola</span> significa somente. Os cinco solas sintetizam os credos teológicos básicos dos reformadores, pilares os quais creram ser essenciais da vid e prática e cristã. Todos os cinco implicitamente rejeitam ou se contrapõem aos ensinamentos da então dominante Igreja Romana, a qual tinha, na mente dos reformadores, usurpado atributos divinos ou qualidades para a Igreja e sua hierarquia, especialmente seu superior, o Papa.
@@ -60,30 +61,32 @@
             <p> Apocalipse 19.1 </p>
           </blockquote>
 
-          <div class="column__left">
-            <figure class="image">
-              <img src="" alt="">
-              <figcaption>
-                <p> Pr Renato Vargens </p>
-              </figcaption>
-            </figure>
+          <div class="columns">
+            <div class="column__left">
+              <figure class="image">
+                <img src="./img/renato-vargens.jpeg" alt="Pr Renato Vargens">
+                <figcaption>
+                  <p> Pr Renato Vargens </p>
+                </figcaption>
+              </figure>
 
-            <p>
-              <ul>
-                <li> Igreja Batista Monte Moriá </li>
-                <li> 23 de Setembro </li>
-              </ul>
-            </p>
-          </div>
+              <p>
+                <ul>
+                  <li> Igreja Batista Monte Moriá </li>
+                  <li> 23 de Setembro </li>
+                </ul>
+              </p>
+            </div>
 
-          <div class="column__right">
-            <p>
-              Reafirmamos que, como a salvação é de Deus e realizada por Deus, ela é para a glória de Deus e devemos glorificá-lo sempre. Devemos viver nossa vida inteira perante a face de Deus, sob a autoridade de Deus, e para sua glória somente.
-            </p>
+            <div class="column__right">
+              <p>
+                Reafirmamos que, como a salvação é de Deus e realizada por Deus, ela é para a glória de Deus e devemos glorificá-lo sempre. Devemos viver nossa vida inteira perante a face de Deus, sob a autoridade de Deus, e para sua glória somente.
+              </p>
 
-            <p>
-              Negamos que possamos apropriadamente glorificar a Deus se nosso culto for confundido com entretenimento, se negligenciarmos ou a Lei ou o Evangelho em nossa pregação, ou se permitirmos que o afeiçoamento próprio, a auto-estima e a auto-realização se tornem opções alternativas ao evangelho.
-            </p>
+              <p>
+                Negamos que possamos apropriadamente glorificar a Deus se nosso culto for confundido com entretenimento, se negligenciarmos ou a Lei ou o Evangelho em nossa pregação, ou se permitirmos que o afeiçoamento próprio, a auto-estima e a auto-realização se tornem opções alternativas ao evangelho.
+              </p>
+            </div>
           </div>
         </article>
       </section>
@@ -100,30 +103,32 @@
             <p> João 14.6 </p>
           </blockquote>
 
-          <div class="column__left">
-            <figure class="image">
-              <img src="" alt="">
-              <figcaption>
-                <p> Pr Valtair Miranda </p>
-              </figcaption>
-            </figure>
+          <div class="columns">
+            <div class="column__left">
+              <figure class="image">
+                <img src="./img/valtair-miranda.jpeg" alt="Pr Valtair Miranda">
+                <figcaption>
+                  <p> Pr Valtair Miranda </p>
+                </figcaption>
+              </figure>
 
-            <p>
-              <ul>
-                <li> PIB Figueira </li>
-                <li> 7 de Outubro </li>
-              </ul>
-            </p>
-          </div>
+              <p>
+                <ul>
+                  <li> PIB Figueira </li>
+                  <li> 7 de Outubro </li>
+                </ul>
+              </p>
+            </div>
 
-          <div class="column__right">
-            <p>
-              Reafirmamos que nossa salvação é realizada unicamente pela obra mediatória do Cristo histórico. Sua vida sem pecado e sua expiação por si só são suficientes para nossa justificação e reconciliação com o Pai.
-            </p>
+            <div class="column__right">
+              <p>
+                Reafirmamos que nossa salvação é realizada unicamente pela obra mediatória do Cristo histórico. Sua vida sem pecado e sua expiação por si só são suficientes para nossa justificação e reconciliação com o Pai.
+              </p>
 
-            <p>
-              Negamos que o evangelho esteja sendo pregado se a obra substitutiva de Cristo não estiver sendo declarada e a fé em Cristo e sua obra não estiver sendo invocada.
-            </p>
+              <p>
+                Negamos que o evangelho esteja sendo pregado se a obra substitutiva de Cristo não estiver sendo declarada e a fé em Cristo e sua obra não estiver sendo invocada.
+              </p>
+            </div>
           </div>
         </article>
       </section>
@@ -140,30 +145,32 @@
             <p> Hebreus 11.6 </p>
           </blockquote>
 
-          <div class="column__left">
-            <figure class="image">
-              <img src="" alt="">
-              <figcaption>
-                <p> Pr Andre Myshilin </p>
-              </figcaption>
-            </figure>
+          <div class="columns">
+            <div class="column__left">
+              <figure class="image">
+                <img src="./img/andre-myshilin.jpeg" alt="Pr Andre Myshilin">
+                <figcaption>
+                  <p> Pr Andre Myshilin </p>
+                </figcaption>
+              </figure>
 
-            <p>
-              <ul>
-                <li> PIB Parque Eldorado </li>
-                <li> 14 de Outubro </li>
-              </ul>
-            </p>
-          </div>
+              <p>
+                <ul>
+                  <li> PIB Parque Eldorado </li>
+                  <li> 14 de Outubro </li>
+                </ul>
+              </p>
+            </div>
 
-          <div class="column__right">
-            <p>
-              Reafirmamos que a justificação é somente pela graça somente por intermédio da fé somente por causa de Cristo. Na justificação a retidão de Cristo nos é imputada como o único meio possível de satisfazer a perfeita justiça de Deus.
-            </p>
+            <div class="column__right">
+              <p>
+                Reafirmamos que a justificação é somente pela graça somente por intermédio da fé somente por causa de Cristo. Na justificação a retidão de Cristo nos é imputada como o único meio possível de satisfazer a perfeita justiça de Deus.
+              </p>
 
-            <p>
-              Negamos que a justificação se baseie em qualquer mérito que em nós possa ser achado, ou com base numa infusão da justiça de Cristo em nós; ou que uma instituição que reivindique ser igreja mas negue ou condene sola fide possa ser reconhecida como igreja legítima.
-            </p>
+              <p>
+                Negamos que a justificação se baseie em qualquer mérito que em nós possa ser achado, ou com base numa infusão da justiça de Cristo em nós; ou que uma instituição que reivindique ser igreja mas negue ou condene sola fide possa ser reconhecida como igreja legítima.
+              </p>
+            </div>
           </div>
         </article>
       </section>
@@ -180,30 +187,32 @@
             <p> II Timóteo 3.16 </p>
           </blockquote>
 
-          <div class="column__left">
-            <figure class="image">
-              <img src="" alt="">
-              <figcaption>
-                <p> Pr Samuel Moutta </p>
-              </figcaption>
-            </figure>
+          <div class="columns">
+            <div class="column__left">
+              <figure class="image">
+                <img src="./img/samuel-motta.jpeg" alt="Pr Samuel Moutta">
+                <figcaption>
+                  <p> Pr Samuel Moutta </p>
+                </figcaption>
+              </figure>
 
-            <p>
-              <ul>
-                <li> PIB Mantiquira </li>
-                <li> 21 de Outubro </li>
-              </ul>
-            </p>
-          </div>
+              <p>
+                <ul>
+                  <li> PIB Mantiquira </li>
+                  <li> 21 de Outubro </li>
+                </ul>
+              </p>
+            </div>
 
-          <div class="column__right">
-            <p>
-              Reafirmamos a Escritura inerrante como fonte única de revelação divina escrita, única para constranger a consciência. A Bíblia sozinha ensina tudo o que é necessário para nossa salvação do pecado, e é o padrão pelo qual todo comportamento cristão deve ser avaliado.
-            </p>
+            <div class="column__right">
+              <p>
+                Reafirmamos a Escritura inerrante como fonte única de revelação divina escrita, única para constranger a consciência. A Bíblia sozinha ensina tudo o que é necessário para nossa salvação do pecado, e é o padrão pelo qual todo comportamento cristão deve ser avaliado.
+              </p>
 
-            <p>
-              Negamos que qualquer credo, concílio ou indivíduo possa constranger a consciência de um crente, que o Espírito Santo fale independentemente de, ou contrariando, o que está exposto na Bíblia, ou que a experiência pessoal possa ser veículo de revelação.
-            </p>
+              <p>
+                Negamos que qualquer credo, concílio ou indivíduo possa constranger a consciência de um crente, que o Espírito Santo fale independentemente de, ou contrariando, o que está exposto na Bíblia, ou que a experiência pessoal possa ser veículo de revelação.
+              </p>
+            </div>
           </div>
         </article>
       </section>
@@ -220,30 +229,32 @@
             <p> Tito 2.11 </p>
           </blockquote>
 
-          <div class="column__left">
-            <figure class="image">
-              <img src="" alt="">
-              <figcaption>
-                <p> Pr Tcharley Amaral </p>
-              </figcaption>
-            </figure>
+          <div class="columns">
+            <div class="column__left">
+              <figure class="image">
+                <img src="./img/tharley-amaral.jpeg" alt="Pr Tcharley Amaral">
+                <figcaption>
+                  <p> Pr Tcharley Amaral </p>
+                </figcaption>
+              </figure>
 
-            <p>
-              <ul>
-                <li> Igreja Batista Monte Moriá </li>
-                <li> 28 de Outubro </li>
-              </ul>
-            </p>
-          </div>
+              <p>
+                <ul>
+                  <li> Igreja Batista Monte Moriá </li>
+                  <li> 28 de Outubro </li>
+                </ul>
+              </p>
+            </div>
 
-          <div class="column__right">
-            <p>
-              Reafirmamos que na salvação somos resgatados da ira de Deus unicamente pela sua graça. A obra sobrenatural do Espírito Santo é que nos leva a Cristo, soltando-nos de nossa servidão ao pecado e erguendo-nos da morte espiritual à vida espiritual.
-            </p>
+            <div class="column__right">
+              <p>
+                Reafirmamos que na salvação somos resgatados da ira de Deus unicamente pela sua graça. A obra sobrenatural do Espírito Santo é que nos leva a Cristo, soltando-nos de nossa servidão ao pecado e erguendo-nos da morte espiritual à vida espiritual.
+              </p>
 
-            <p>
-              Negamos que a salvação seja em qualquer sentido obra humana. Os métodos, técnicas ou estratégias humanas por si só não podem realizar essa transformação. A fé não é produzida pela nossa natureza não-regenerada.
-            </p>
+              <p>
+                Negamos que a salvação seja em qualquer sentido obra humana. Os métodos, técnicas ou estratégias humanas por si só não podem realizar essa transformação. A fé não é produzida pela nossa natureza não-regenerada.
+              </p>
+            </div>
           </div>
         </article>
       </section>
