Inserindo arquivos para o banner do header

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,18 @@
 
     <!-- Cabecalho do site -->
     <header class="header">
-      <h1 hidden="hidden" class="is-hidden"> Projeto Cinco Solas </h1>
+      <hgroup class="container_title">
+        <h1 class="title"> Cinco Solas </h1>
+        <h1 class="subtitle"> Comemorando os 500 anos de Reforma </h1>
+      </hgroup>
+      <div class="container_images">
+        <figure class="church">
+          <img src="./img/igreja.png" alt="">
+        </figure>
+        <figure class="solas">
+          <img src="./img/5solas.png" alt="">
+        </figure>
+      </div>
     </header>
 
     <main class="main">
