--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Arimo|Trocchi|UnifrakturMaguntia" rel="stylesheet">
+    <link rel="stylesheet" href="./css/aos.css">
     <link rel="stylesheet" href="./css/app.css">
     <meta name="theme-color" content="#332211">
     <title> Projeto Cinco Solas </title>
@@ -60,10 +61,10 @@
         </article>
       </section>
 
-      <!-- Seção Sola Deo Gloria -->
+      <!-- Seção Soli Deo Gloria -->
       <section class="section">
         <article>
-          <h2 class="section__title"> Sola Deo Gloria </h2>
+          <h2 class="section__title"> Soli Deo Gloria </h2>
 
           <blockquote cite="https://www.bibliaonline.com.br/acf/ap/19">
             <p>
@@ -73,7 +74,7 @@
           </blockquote>
 
           <div class="columns">
-            <div class="column__left">
+            <div class="column__left" data-aos="zoom-in-right">
               <figure class="image">
                 <img src="./img/renato-vargens.jpeg" alt="Pr Renato Vargens">
                 <figcaption>
@@ -83,13 +84,12 @@
 
               <p>
                 <ul>
-                  <li> Igreja Batista Monte Moriá </li>
-                  <li> 23 de Setembro </li>
+                  <li class="date"> 23 de Setembro </li>
                 </ul>
               </p>
             </div>
 
-            <div class="column__right">
+            <div class="column__right" data-aos="zoom-in-left">
               <p>
                 Reafirmamos que, como a salvação é de Deus e realizada por Deus, ela é para a glória de Deus e devemos glorificá-lo sempre. Devemos viver nossa vida inteira perante a face de Deus, sob a autoridade de Deus, e para sua glória somente.
               </p>
@@ -100,12 +100,20 @@
             </div>
           </div>
         </article>
+
+        <div class="map">
+          <p class="map__location">
+            Igreja Batista Nova Betânia
+          </p>
+          <hr>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.502355825406!2d-43.32110738555796!3d-22.597708532595146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x990d0e453d587b%3A0xf3bee5a9dcaca743!2sIgreja+Batista+Nova+Bet%C3%A2nia!5e0!3m2!1spt-BR!2sbr!4v1500832986426"frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
       </section>
 
-      <!-- Seção Sola Christus -->
+      <!-- Seção Solus Christus -->
       <section class="section">
         <article>
-          <h2 class="section__title"> Sola Christus </h2>
+          <h2 class="section__title"> Solus Christus </h2>
 
           <blockquote cite="https://www.bibliaonline.com.br/acf/jo/14">
             <p>
@@ -115,7 +123,7 @@
           </blockquote>
 
           <div class="columns">
-            <div class="column__left">
+            <div class="column__left" data-aos="zoom-in-right">
               <figure class="image">
                 <img src="./img/valtair-miranda.jpeg" alt="Pr Valtair Miranda">
                 <figcaption>
@@ -125,13 +133,12 @@
 
               <p>
                 <ul>
-                  <li> PIB Figueira </li>
-                  <li> 7 de Outubro </li>
+                  <li class="date"> 7 de Outubro </li>
                 </ul>
               </p>
             </div>
 
-            <div class="column__right">
+            <div class="column__right" data-aos="zoom-in-left">
               <p>
                 Reafirmamos que nossa salvação é realizada unicamente pela obra mediatória do Cristo histórico. Sua vida sem pecado e sua expiação por si só são suficientes para nossa justificação e reconciliação com o Pai.
               </p>
@@ -142,6 +149,14 @@
             </div>
           </div>
         </article>
+
+        <div class="map">
+          <p class="map__location">
+            Igreja Batista Central em Xerém
+          </p>
+          <hr>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.857392032319!2d-43.30860008555824!3d-22.584436432124537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x990d0dc955a739%3A0x89fc24cb231ab88b!2sIgreja+Batista+Central+em+Xerem!5e0!3m2!1spt-BR!2sbr!4v1500833360184" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
       </section>
 
       <!-- Seção Sola Fide -->
@@ -157,7 +172,7 @@
           </blockquote>
 
           <div class="columns">
-            <div class="column__left">
+            <div class="column__left" data-aos="zoom-in-right">
               <figure class="image">
                 <img src="./img/andre-myshilin.jpeg" alt="Pr Andre Myshilin">
                 <figcaption>
@@ -167,13 +182,12 @@
 
               <p>
                 <ul>
-                  <li> PIB Parque Eldorado </li>
-                  <li> 14 de Outubro </li>
+                  <li class="date"> 14 de Outubro </li>
                 </ul>
               </p>
             </div>
 
-            <div class="column__right">
+            <div class="column__right" data-aos="zoom-in-left">
               <p>
                 Reafirmamos que a justificação é somente pela graça somente por intermédio da fé somente por causa de Cristo. Na justificação a retidão de Cristo nos é imputada como o único meio possível de satisfazer a perfeita justiça de Deus.
               </p>
@@ -184,6 +198,15 @@
             </div>
           </div>
         </article>
+
+        <div class="map">
+          <p class="map__location">
+            Primeira Igreja Batista em Parque Eldorado
+          </p>
+          <hr>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3682.212858000381!2d-43.29479368555655!3d-22.645851034304098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9972e25819a2e1%3A0xf2b047a56427a746!2sPrimeira+Igreja+Batista+em+Parque+Eldorado!5e0!3m2!1spt-BR!2sbr!4v1500817781307" width="200" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+
       </section>
 
       <!-- Seção Sola Scriptura -->
@@ -199,7 +222,7 @@
           </blockquote>
 
           <div class="columns">
-            <div class="column__left">
+            <div class="column__left" data-aos="zoom-in-right">
               <figure class="image">
                 <img src="./img/samuel-motta.jpeg" alt="Pr Samuel Moutta">
                 <figcaption>
@@ -209,13 +232,12 @@
 
               <p>
                 <ul>
-                  <li> PIB Mantiquira </li>
-                  <li> 21 de Outubro </li>
+                  <li class="date"> 21 de Outubro </li>
                 </ul>
               </p>
             </div>
 
-            <div class="column__right">
+            <div class="column__right" data-aos="zoom-in-left">
               <p>
                 Reafirmamos a Escritura inerrante como fonte única de revelação divina escrita, única para constranger a consciência. A Bíblia sozinha ensina tudo o que é necessário para nossa salvação do pecado, e é o padrão pelo qual todo comportamento cristão deve ser avaliado.
               </p>
@@ -226,6 +248,13 @@
             </div>
           </div>
         </article>
+        <div class="map">
+          <p class="map__location">
+            Primeira Igreja Batista em Figueira
+          </p>
+          <hr>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3683.6526994166315!2d-43.303515385557915!3d-22.59208923239589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1500816620596" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
       </section>
 
       <!-- Seção Sola Gratia -->
@@ -241,7 +270,7 @@
           </blockquote>
 
           <div class="columns">
-            <div class="column__left">
+            <div class="column__left" data-aos="zoom-in-right">
               <figure class="image">
                 <img src="./img/tharley-amaral.jpeg" alt="Pr Tcharley Amaral">
                 <figcaption>
@@ -251,13 +280,12 @@
 
               <p>
                 <ul>
-                  <li> Igreja Batista Monte Moriá </li>
-                  <li> 28 de Outubro </li>
+                  <li class="date"> 28 de Outubro </li>
                 </ul>
               </p>
             </div>
 
-            <div class="column__right">
+            <div class="column__right" data-aos="zoom-in-left">
               <p>
                 Reafirmamos que na salvação somos resgatados da ira de Deus unicamente pela sua graça. A obra sobrenatural do Espírito Santo é que nos leva a Cristo, soltando-nos de nossa servidão ao pecado e erguendo-nos da morte espiritual à vida espiritual.
               </p>
@@ -268,6 +296,13 @@
             </div>
           </div>
         </article>
+        <div class="map">
+          <p class="map__location">
+            Primeira Igreja Batista Monte Moriá
+          </p>
+          <hr>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1206.8890734476226!2d-43.284414884207585!3d-22.646133231538915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9974c9b7897d03%3A0x70400ce2e75ca589!2sIGREJA+BATISTA+MONTE+MORIA!5e0!3m2!1spt-BR!2sbr!4v1500817339819" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
       </section>
     </main>
 
@@ -275,5 +310,15 @@
     <footer class="footer">
 
     </footer>
+
+    <script src="./js/aos.js" charset="utf-8"></script>
+    <script type="text/javascript">
+      AOS.init({
+        offset: 200,
+        duration: 600,
+        easing: 'ease',
+        delay: 100,
+      })
+    </script>
   </body>
 </html>
