--- a/src/index.html
+++ b/src/index.html
@@ -311,6 +311,10 @@
 
     </footer>
 
+    <div class="copyright">
+      <p> Site feito com <span class="love">❤</span> por <a href="http://emanuelgdev.com.br">Emanuel Gonçalves</a> </p>
+    </div>
+
     <script src="./js/aos.js" charset="utf-8"></script>
     <script type="text/javascript">
       AOS.init({
