Inserindo footer ao site

--- a/src/index.html
+++ b/src/index.html
@@ -304,16 +304,38 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1206.8890734476226!2d-43.284414884207585!3d-22.646133231538915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9974c9b7897d03%3A0x70400ce2e75ca589!2sIGREJA+BATISTA+MONTE+MORIA!5e0!3m2!1spt-BR!2sbr!4v1500817339819" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </section>
+
+      <!-- Colaboradores -->
+      <footer class="footer">
+
+        <h3 class="footer__title"> Realização </h3>
+
+        <div class="logos">
+          <figure class="logo__figure">
+            <img src="./img/jubanoc.jpg" alt="Logo da JUBERJ" class="logo">
+          </figure>
+        </div>
+
+        <hr>
+
+        <h3 class="footer__title"> Apoiadores </h3>
+
+        <div class="logos">
+          <figure class="logo__figure">
+            <img src="./img/juberj.png" alt="Logo da JUBERJ" class="logo">
+          </figure>
+
+          <figure class="logo__figure">
+            <img src="./img/ibmm.jpg" alt="Logo dos Jovens da Igreja Batista Monte Moriá" class="logo">
+          </figure>
+        </div>
+
+      </footer>
+
+      <div class="copyright">
+        <p> Site feito com <span class="love">❤</span> por <a href="http://emanuelgdev.com.br">Emanuel Gonçalves</a> </p>
+      </div>
     </main>
-
-    <!-- Colaboradores -->
-    <footer class="footer">
-
-    </footer>
-
-    <div class="copyright">
-      <p> Site feito com <span class="love">❤</span> por <a href="http://emanuelgdev.com.br">Emanuel Gonçalves</a> </p>
-    </div>
 
     <script src="./js/aos.js" charset="utf-8"></script>
     <script type="text/javascript">
