Corrigindo palavra vida

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
           <h3 class="section__subtitle"> Os Cinco Solas </h3>
 
           <p>
-            Cinco Solas são frases latinas que definem princípios fundamentais da Reforma Protestante em contradição com os ensinamentos da Igreja Católica Romana. A palavra latina <span class="content--italic">sola</span> significa somente. Os cinco solas sintetizam os credos teológicos básicos dos reformadores, pilares os quais creram ser essenciais da vid e prática e cristã. Todos os cinco implicitamente rejeitam ou se contrapõem aos ensinamentos da então dominante Igreja Romana, a qual tinha, na mente dos reformadores, usurpado atributos divinos ou qualidades para a Igreja e sua hierarquia, especialmente seu superior, o Papa.
+            Cinco Solas são frases latinas que definem princípios fundamentais da Reforma Protestante em contradição com os ensinamentos da Igreja Católica Romana. A palavra latina <span class="content--italic">sola</span> significa somente. Os cinco solas sintetizam os credos teológicos básicos dos reformadores, pilares os quais creram ser essenciais da vida e prática e cristã. Todos os cinco implicitamente rejeitam ou se contrapõem aos ensinamentos da então dominante Igreja Romana, a qual tinha, na mente dos reformadores, usurpado atributos divinos ou qualidades para a Igreja e sua hierarquia, especialmente seu superior, o Papa.
           </p>
 
           <p>
