Inserindo meta tags ao site

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,31 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Arimo|Trocchi|UnifrakturMaguntia" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="5 Solas, Comemorando os 500 anos de Reforma">
+    <meta name="author" content="Emanuel Gonçalves">
+
+    <!-- Meta Tags for Facebook -->
+    <meta property="og:title" content="5 Solas, Comemorando os 500 anos de Reforma" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Conheça o projeto 5 Solas. Um projeto realizado pela Juventude Batista Norte Caxiense, em que o objetivo é revisitar as bases da Reforma Protestante" />
+    <meta property="og:url" content="http://cincosolas.surge.sh/" />
+    <meta property="og:image" content="http://cincosolas.surge.sh/img/banner.jpg" />
+    <meta property="og:sitename" content="Projeto Cinco Solas" />
+
+    <!-- Meta Tags for Twitter -->
+    <meta name="twitter:description" content="Conheça o projeto 5 Solas. Um projeto realizado pela Juventude Batista Norte Caxiense, em que o objetivo é revisitar as bases da Reforma Protestante" />
+    <meta name="twitter:title" content="5 Solas, Comemorando os 500 anos de Reforma" />
+    <meta name="twitter:url" content="http://cincosolas.surge.sh/" />
+
+    <!-- Alterando a cor do tema do site -->
+    <meta name="theme-color" content="#332211">
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="./css/aos.css">
     <link rel="stylesheet" href="./css/app.css">
-    <meta name="theme-color" content="#332211">
+
     <title> Projeto Cinco Solas </title>
   </head>
   <body>
