--- a/src/index.html
+++ b/src/index.html
@@ -272,7 +272,7 @@
         </article>
         <div class="map">
           <p class="map__location">
-            Primeira Igreja Batista em Figueira
+            Primeira Igreja Batista em Mantiquira
           </p>
           <hr>
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3683.6526994166315!2d-43.303515385557915!3d-22.59208923239589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1500816620596" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -320,7 +320,7 @@
         </article>
         <div class="map">
           <p class="map__location">
-            Primeira Igreja Batista Monte Moriá
+            Igreja Batista em Monte Moriá
           </p>
           <hr>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1206.8890734476226!2d-43.284414884207585!3d-22.646133231538915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9974c9b7897d03%3A0x70400ce2e75ca589!2sIGREJA+BATISTA+MONTE+MORIA!5e0!3m2!1spt-BR!2sbr!4v1500817339819" frameborder="0" style="border:0" allowfullscreen></iframe>
