Fazendo modificacoes no index.html

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
     <link href="https://fonts.googleapis.com/css?family=Arimo|Trocchi|UnifrakturMaguntia" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="5 Solas, Comemorando os 500 anos de Reforma">
+    <meta name="description" content="5 Solas, Comemorando os 500 anos da Reforma">
     <meta name="author" content="Emanuel Gonçalves">
 
     <!-- Meta Tags for Facebook -->
-    <meta property="og:title" content="5 Solas, Comemorando os 500 anos de Reforma" />
+    <meta property="og:title" content="5 Solas, Comemorando os 500 anos da Reforma" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Conheça o projeto 5 Solas. Um projeto realizado pela Juventude Batista Norte Caxiense, em que o objetivo é revisitar as bases da Reforma Protestante" />
     <meta property="og:url" content="http://cincosolas.surge.sh/" />
@@ -19,7 +19,7 @@
 
     <!-- Meta Tags for Twitter -->
     <meta name="twitter:description" content="Conheça o projeto 5 Solas. Um projeto realizado pela Juventude Batista Norte Caxiense, em que o objetivo é revisitar as bases da Reforma Protestante" />
-    <meta name="twitter:title" content="5 Solas, Comemorando os 500 anos de Reforma" />
+    <meta name="twitter:title" content="5 Solas, Comemorando os 500 anos da Reforma" />
     <meta name="twitter:url" content="http://cincosolas.surge.sh/" />
 
     <!-- Alterando a cor do tema do site -->
@@ -37,7 +37,7 @@
     <header class="header">
       <hgroup class="container_title">
         <h1 class="title"> Cinco Solas </h1>
-        <h1 class="subtitle"> Comemorando os 500 anos de Reforma </h1>
+        <h1 class="subtitle"> Comemorando os 500 anos da Reforma </h1>
       </hgroup>
       <div class="container_images">
         <figure class="church">
