--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
           </p>
 
           <p>
-            A seguir, conheça cada sola que será abordada neste evento. As declarações dos textos abaixo foram extraídas da <a href="http://www.monergismo.com/textos/credos/declaracao_cambridge.htm">Declaração de Cambrigde</a>
+            A seguir, conheça cada sola que será abordado neste evento. As declarações dos textos abaixo foram extraídas da <a href="http://www.monergismo.com/textos/credos/declaracao_cambridge.htm" title="Ler texto na íntegra da Declaração de Cambrigde">Declaração de Cambrigde</a>
           </p>
         </article>
       </section>
@@ -320,7 +320,7 @@
         </article>
         <div class="map">
           <p class="map__location">
-            Igreja Batista em Monte Moriá
+            Igreja Batista Monte Moriá
           </p>
           <hr>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1206.8890734476226!2d-43.284414884207585!3d-22.646133231538915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9974c9b7897d03%3A0x70400ce2e75ca589!2sIGREJA+BATISTA+MONTE+MORIA!5e0!3m2!1spt-BR!2sbr!4v1500817339819" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -334,7 +334,7 @@
 
         <div class="logos">
           <figure class="logo__figure jubanoc">
-            <img src="./img/jubanoc.jpeg" alt="Logo da JUBERJ" class="logo">
+            <img src="./img/jubanoc.jpeg" alt="Logo da JUBANOC - Juventude Batista Norte Caxiense" class="logo">
           </figure>
         </div>
 
@@ -344,7 +344,7 @@
 
         <div class="logos">
           <figure class="logo__figure">
-            <img src="./img/juberj.png" alt="Logo da JUBERJ" class="logo">
+            <img src="./img/juberj.png" alt="Logo da JUBERJ - Juventude Batista do Estado do Rio de Janeiro" class="logo">
           </figure>
 
           <figure class="logo__figure">
@@ -355,7 +355,7 @@
       </footer>
 
       <div class="copyright">
-        <p> Site feito com <span class="love">❤</span> por <a href="http://emanuelgdev.com.br">Emanuel Gonçalves</a> </p>
+        <p> Site feito com <span class="love">❤</span> por <a href="http://emanuelgdev.com.br" title="Ir para o site do desenvolvedor deste site, Emanuel Gonçalves">Emanuel Gonçalves</a> </p>
       </div>
     </main>
 
